Favicon and comments removed

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,8 @@
 <footer class="notepad-site-footer">
     <div class="copyright">
-         <section>All content copyright <a href="{{ site.url }}/about">{{ site.owner.name }}</a> &copy; {{ site.time | date: '%Y' }} &bull; All rights reserved.</section>
-         <section>Proudly published with <a class="icon-ghost" href="https://jekyllrb.com/">Jekyll</a></section>
+         <section><a href="{{ site.url }}/about"><b>{{ site.owner.name }}</b></a> &copy; {{ site.time | date: '%Y' }} &bull; All Rights Reserved.</section>
+         <section>Proudly published with <a class="icon-ghost" href="https://jekyllrb.com/">Jekyll</a> and hosted through Github Pages and Godaddy DNS.</section>
+         <section>Theme powered by : <a class="icon-ghost" href="http://www.hossainmohdfaysal.com/">HMFaysal</a>
     </div>
     <div class="social-icons">
         
