Added linkedin information to footer

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -14,6 +14,16 @@
             </span>
         </a>
         {% endif %}
+        
+         {% if site.owner.linkedin %}
+        <a href="https://linkedin.com/in/{{ site.owner.linkedin }}">
+            <span class="fa-stack fa-lg">
+                <i class="fa fa-circle fa-stack-2x fa-inverse"></i>
+                <i class="fa fa-linkedin fa-stack-1x"></i>
+            </span>
+        </a>
+        {% endif %}
+        
         {% if site.owner.google_plus %}
         <a href="{{ site.owner.google_plus }}">
             <span class="fa-stack fa-lg">
