Config.Contact and Footer Changes

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,7 +2,7 @@
     <div class="copyright">
          <section><a href="{{ site.url }}/about"><b>{{ site.owner.name }}</b></a> &copy; {{ site.time | date: '%Y' }} &bull; All Rights Reserved.</section>
          <section>Proudly published with <a class="icon-ghost" href="https://jekyllrb.com/">Jekyll</a> and hosted through Github Pages and Godaddy DNS.</section>
-         <section>Theme powered by : <a class="icon-ghost" href="http://www.hossainmohdfaysal.com/">HMFaysal</a>
+         <section>Theme powered by : HMFaysal
     </div>
     <div class="social-icons">
         
