Logo redirect on multiple changes

--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -11,7 +11,7 @@
         <header class="notepad-page-header">
             <div class="notepad-page-menu-header">
                 
-                    <a class="notepad-blog-logo" href="{{ site.url }}">
+                    <a class="notepad-blog-logo" href="http://sh4.in">
                         <img src="{{ site.url }}/images/{{ site.logo }}" alt="Blog Logo">
                     </a>
                 
