--- a/_includes/head.html
+++ b/_includes/head.html
@@ -44,6 +44,8 @@
     <link rel="stylesheet" href="{{ site.url }}/assets/css/post.css">
 
 
+
+
 {% if page.mathjax %}
 <!--Load Mathjax-->
 <script type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
@@ -86,3 +88,4 @@
 <link rel="apple-touch-icon-precomposed" sizes="114x114" href="{{ site.url }}/images/apple-touch-icon-114x114-precomposed.png">
 <!-- 144x144 (precomposed) for iPad 3rd and 4th generation -->
 <link rel="apple-touch-icon-precomposed" sizes="144x144" href="{{ site.url }}/images/apple-touch-icon-144x144-precomposed.png">
+<div id="home"></div>
