--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,9 +2,9 @@
 <div id="backtotop"><a href="#home" class="scroll"><img src="/images/up.png"></a></div>
     <div class="copyright">
          <section><a href="{{ site.url }}/about"><b>{{ site.owner.name }}</b></a> &copy; {{ site.time | date: '%Y' }} &bull; All Rights Reserved.</section>
-         <section>Proudly published with <a class="icon-ghost" href="https://jekyllrb.com/">Jekyll</a> and hosted through Github Pages and Godaddy DNS.</section>
-         <section>Theme powered by : HMFaysal</section>
-         <section>Visitor Count powered by StatCounter :
+         <section>Proudly published via <a class="icon-ghost" href="https://jekyllrb.com/">Jekyll</a> and hosted through Github Pages and Godaddy DNS.</section>
+         <section>Theme powered by: HMFaysal</section>
+         <section>Visitor Count powered by StatCounter:
          <!-- Start of StatCounter Code for Default Guide -->
 <script type="text/javascript">
 var sc_project=10616444; 
