--- a/_includes/head.html
+++ b/_includes/head.html
@@ -42,10 +42,32 @@
     <link rel="stylesheet" href="{{ site.url }}/assets/css/vendor/foundation.min.css">
     <link rel="stylesheet" href="{{ site.url }}/assets/css/style.css">
     <link rel="stylesheet" href="{{ site.url }}/assets/css/post.css">
+    <link rel="stylesheet" href="{{ site.url }}/assets/vegas/vegas.min.css">
 
 
 <!-- Fastest JQuery CDN Lib -->
 <script src="https://cdn.jsdelivr.net/jquery/3.0.0-alpha1/jquery.min.js"></script>
+
+<!-- Vegas Background Image Plugin -->
+<script src="{{ site.url }}/assets/vegas/vegas.min.js"></script>
+
+<script>
+				jQuery(document).ready(function($) {
+						$("#example, body").vegas({
+							autoplay: true,
+							transition: 'fade',
+							transitionDuration: 2000,
+							slides: [
+								{ src: "{{ site.url }}/images/cover1.jpg" },
+								{ src: "{{ site.url }}/images/cover3.jpg" },
+								{ src: "{{ site.url }}/images/cover6.jpg" }
+								],
+							loop: true
+						});
+					});
+			</script>
+
+
 <script>
 $(function() {
   $('a[href*=#]:not([href=#])').click(function() {
