--- a/_includes/head.html
+++ b/_includes/head.html
@@ -35,8 +35,9 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 
 
+    <link href='http://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Montserrat:400,700|Open+Sans:400,600,300,800,700' rel='stylesheet' type='text/css'>
-	<link rel="stylesheet" href="{{ site.url }}/assets/css/vendor/font-awesome.min.css">
+    <link rel="stylesheet" href="{{ site.url }}/assets/css/vendor/font-awesome.min.css">
     <link rel="stylesheet" href="{{ site.url }}/assets/css/vendor/normalize.css">
     <link rel="stylesheet" href="{{ site.url }}/assets/css/vendor/nprogress.css">
     <link rel="stylesheet" href="{{ site.url }}/assets/css/vendor/foundation.min.css">
@@ -46,7 +47,7 @@
 
 
 <!-- Fastest JQuery CDN Lib -->
-<script src="https://cdn.jsdelivr.net/jquery/3.0.0-alpha1/jquery.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
 <!-- Vegas Background Image Plugin -->
 <script src="{{ site.url }}/assets/vegas/vegas.min.js"></script>
@@ -58,9 +59,9 @@
 							transition: 'fade',
 							transitionDuration: 2000,
 							slides: [
-								{ src: "{{ site.url }}/images/cover1.jpg" },
-								{ src: "{{ site.url }}/images/cover3.jpg" },
-								{ src: "{{ site.url }}/images/cover6.jpg" }
+								{ src: "{{ site.url }}/images/cover1.jpg", overlayText: "This is the first photography | Beautiful Waves" },
+								{ src: "{{ site.url }}/images/cover3.jpg", overlayText: "This is the first photography | Beautiful Waves" },
+								{ src: "{{ site.url }}/images/cover6.jpg", overlayText: "This is the first photography | Beautiful Waves" }
 								],
 							loop: true
 						});
