--- a/_includes/head.html
+++ b/_includes/head.html
@@ -50,7 +50,7 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
 <!-- Vegas Background Image Plugin -->
-<script src="{{ site.url }}/assets/vegas/vegas.min.js"></script>
+<script src="{{ site.url }}/assets/vegas/vegas.js"></script>
 
 <script>
 				jQuery(document).ready(function($) {
