--- a/_includes/head.html
+++ b/_includes/head.html
@@ -54,14 +54,14 @@
 
 <script>
 				jQuery(document).ready(function($) {
-						$("#vegas-slider, body").vegas({
+						$("#example, body").vegas({
 							autoplay: true,
 							transition: 'fade',
 							transitionDuration: 2000,
 							slides: [
 								{ src: "{{ site.url }}/images/cover1.jpg", overlayText: "This is the first photography | Beautiful Waves" },
-								{ src: "{{ site.url }}/images/cover3.jpg", overlayText: "This is the second photography | Beautiful Waves" },
-								{ src: "{{ site.url }}/images/cover6.jpg", overlayText: "This is the third photography | Beautiful Waves" }
+								{ src: "{{ site.url }}/images/cover3.jpg", overlayText: "This is the first photography | Beautiful Waves" },
+								{ src: "{{ site.url }}/images/cover6.jpg", overlayText: "This is the first photography | Beautiful Waves" }
 								],
 							loop: true
 						});
