--- a/_includes/head.html
+++ b/_includes/head.html
@@ -45,6 +45,14 @@
     <link rel="stylesheet" href="{{ site.url }}/assets/css/post.css">
     <link rel="stylesheet" href="{{ site.url }}/assets/vegas/vegas.min.css">
 
+<!-- Google ADS -->
+<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<script>
+  (adsbygoogle = window.adsbygoogle || []).push({
+    google_ad_client: "ca-pub-2690919849601061",
+    enable_page_level_ads: true
+  });
+</script>
 
 <!-- Fastest JQuery CDN Lib -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
