Changes to GoogleAds

--- a/_includes/disqus_comments.html
+++ b/_includes/disqus_comments.html
@@ -1,3 +1,13 @@
+<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- Text Ad 1 -->
+<ins class="adsbygoogle"
+     style="display:inline-block;width:728px;height:90px"
+     data-ad-client="ca-pub-2690919849601061"
+     data-ad-slot="1843650630"></ins>
+<script>
+(adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+
 <script type="text/javascript">
     /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
     var disqus_shortname = '{{ site.disqus_shortname }}'; // required: replace example with your forum shortname
