--- a/_includes/head.html
+++ b/_includes/head.html
@@ -36,7 +36,7 @@
 
 
     <link href='http://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'>
-    <link href='http://fonts.googleapis.com/css?family=PT%20Sans%20Narrow' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=PT%20Sans' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Montserrat:400,700|Open+Sans:400,600,300,800,700' rel='stylesheet' type='text/css'>
     
     <link rel="stylesheet" href="{{ site.url }}/assets/css/vendor/font-awesome.min.css">
