--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,7 @@
 <footer class="notepad-site-footer">
 <div id="backtotop"><a href="#home" class="scroll"><img src="/images/up.png"></a></div>
     <div class="copyright">
-         <section><a href="{{ site.url }}/about"><b>{{ site.owner.name }}</b></a> &copy; {{ site.time | date: '%Y' }} &bull; All Rights Reserved.</section>
+         <section><a href="{{ site.url }}/about"><b>{{ site.owner.name }}</b></a> &copy; 2015 - {{ site.time | date: '%Y' }} &bull; All Rights Reserved.</section>
          <section>Proudly published via <a class="icon-ghost" href="https://jekyllrb.com/">Jekyll</a> and hosted through Github Pages and Godaddy DNS.</section>
          <section>Jekyll Theme : HMFaysal</section>
          <section>Image Slider : Jay Salvat</section>
