--- a/_includes/head.html
+++ b/_includes/head.html
@@ -47,7 +47,7 @@
     <link rel="stylesheet" href="{{ site.url }}/assets/css/post.css">
     <link rel="stylesheet" href="{{ site.url }}/assets/vegas/vegas.min.css">
 
-<!-- Google ADS -->
+<!-- Google ADS
 <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <script>
   (adsbygoogle = window.adsbygoogle || []).push({
@@ -55,6 +55,7 @@
     enable_page_level_ads: true
   });
 </script>
+-->
 
 
 
