--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -28,3 +28,22 @@
 </script>
 {% endif %}
 <script>NProgress.start();var interval=setInterval(function(){NProgress.inc()},1000);jQuery(window).load(function(){clearInterval(interval);NProgress.done()});jQuery(window).unload(function(){NProgress.start()});</script>
+
+<script>
+(function(){
+      var words = [
+          'I want to change the world.',
+          'I am all of the above.',
+          'I am none of the above.',
+          'I want to quit everything.',
+          'I want to fly, but I cant',
+          'I wonder why this society is so fucked up',
+          'I want to run away.'
+          ], i = 0;
+      setInterval(function(){
+          $('#changingword').fadeOut(function(){
+              $(this).html( words[Math.floor(Math.random() * words.length)]).fadeIn();            
+          });
+      }, 2000);        
+  })();
+</script>
