--- a/_includes/head.html
+++ b/_includes/head.html
@@ -57,6 +57,18 @@
 </script>
 -->
 
+<script type="text/javascript" src="{{ site.url }}/assets/js/bug/bug.js"></script>
+		<script type='text/javascript'>
+			// default fruit fly bug:
+			new BugController({
+			});
+
+			// default spiders:
+			new SpiderController({
+			});
+		</script>
+
+
 
 
 <!-- Fastest JQuery CDN Lib -->
