--- a/_includes/head.html
+++ b/_includes/head.html
@@ -60,12 +60,12 @@
 <script type="text/javascript" src="{{ site.url }}/assets/js/bug/bug.js"></script>
 		<script type='text/javascript'>
 			// default fruit fly bug:
-			new BugController({
-			});
+			//new BugController({
+			//});
 
 			// default spiders:
-			new SpiderController({
-			});
+			//new SpiderController({
+			//});
 		</script>
 
 
