--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,7 +4,7 @@
          <section><a href="{{ site.url }}/about"><b>{{ site.owner.name }}</b></a> &copy; 2015 - {{ site.time | date: '%Y' }} &bull; All Rights Reserved.</section>
          <section>Proudly published via <a class="icon-ghost" href="https://jekyllrb.com/">Jekyll</a> and hosted through Github Pages and Godaddy DNS.</section>
          <section>Jekyll Theme : HMFaysal</section>
-         <section>Image Slider : Jay Salvat</section>
+         <!-- <section>Image Slider : Jay Salvat</section> -->
          <section>Visitor Count powered by StatCounter:
          <!-- Start of StatCounter Code for Default Guide -->
 <script type="text/javascript">
