--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -36,7 +36,7 @@
           'I am all of the above.',
           'I am none of the above.',
           'I want to quit everything.',
-          'I want to fly, but I cant',
+          'I just gaze',
           'I wonder why this society is so fucked up',
           'I want to run away.'
           ], i = 0;
