--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -27,7 +27,7 @@ alt="shopify analytics ecommerce"></a></div></noscript>
 
 <br><br>
 <!-- Cluster Maps -->
-<div id="clustrmaps-widget"></div><script type="text/javascript">var _clustrmaps = {'url' : 'http://sh4.in', 'user' : 1179997, 'server' : '3', 'id' : 'clustrmaps-widget', 'version' : 1, 'date' : '2015-10-01', 'lang' : 'en', 'corners' : 'square' };(function (){ var s = document.createElement('script'); s.type = 'text/javascript'; s.async = true; s.src = 'http://www3.clustrmaps.com/counter/map.js'; var x = document.getElementsByTagName('script')[0]; x.parentNode.insertBefore(s, x);})();</script><noscript><a href="http://www3.clustrmaps.com/user/fcb12015d"><img src="http://www3.clustrmaps.com/stats/maps-no_clusters/sh4.in-thumb.jpg" alt="Locations of visitors to this page" /></a></noscript>
+<div id="clustrmaps-widget"></div><script type="text/javascript">var _clustrmaps = {'url' : 'https://sh4.in', 'user' : 1179997, 'server' : '3', 'id' : 'clustrmaps-widget', 'version' : 1, 'date' : '2015-10-01', 'lang' : 'en', 'corners' : 'square' };(function (){ var s = document.createElement('script'); s.type = 'text/javascript'; s.async = true; s.src = 'http://www3.clustrmaps.com/counter/map.js'; var x = document.getElementsByTagName('script')[0]; x.parentNode.insertBefore(s, x);})();</script><noscript><a href="http://www3.clustrmaps.com/user/fcb12015d"><img src="http://www3.clustrmaps.com/stats/maps-no_clusters/sh4.in-thumb.jpg" alt="Locations of visitors to this page" /></a></noscript>
 
 </section>
     </div>
@@ -68,7 +68,7 @@ alt="shopify analytics ecommerce"></a></div></noscript>
         </a>
         {% endif %}
         {% if site.owner.github %}
-        <a href="http://github.com/{{ site.owner.github }}">
+        <a href="https://github.com/{{ site.owner.github }}">
             <span class="fa-stack fa-lg">
                 <i class="fa fa-circle fa-stack-2x fa-inverse"></i>
                 <i class="fa fa-github fa-stack-1x"></i>
