--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -6,7 +6,7 @@
 <body class="home-template" itemscope itemtype="http://schema.org/WebPage">
 <header class="notepad-site-head">
     <div class="notepad-site-head-menu">
-        <a class="notepad-blog-logo" href="http://sh4.in"><img src="{{ site.url }}/images/{{ site.logo }}" alt="Blog Logo" /></a>
+        <a class="notepad-blog-logo" href="https://sh4.in"><img src="{{ site.url }}/images/{{ site.logo }}" alt="Blog Logo" /></a>
         
         
         <div class="notepad-blog-menu">      
