--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -16,7 +16,7 @@
             <header class="notepad-post-header-simple">
                 <div class="notepad-post-menu-header-simple">
 {% endif %}
-                    <a class="notepad-blog-logo" href="http://sh4.in">
+                    <a class="notepad-blog-logo" href="https://sh4.in">
                         <img src="{{ site.url }}/images/{{ site.logo }}" alt="Blog Logo" />
                     </a>
 
