--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -12,7 +12,7 @@ var sc_project=10616444;
 var sc_invisible=0; 
 var sc_security="66d515ff"; 
 var scJsHost = (("https:" == document.location.protocol) ?
-"https://secure." : "http://www.");
+"https://secure." : "https://www.");
 document.write("<sc"+"ript type='text/javascript' src='" +
 scJsHost+
 "statcounter.com/counter/counter.js'></"+"script>");
@@ -20,21 +20,21 @@ scJsHost+
 <noscript><div class="statcounter"><a title="shopify
 analytics ecommerce" href="http://statcounter.com/shopify/"
 target="_blank"><img class="statcounter"
-src="http://c.statcounter.com/10616444/0/66d515ff/0/"
+src="https://c.statcounter.com/10616444/0/66d515ff/0/"
 alt="shopify analytics ecommerce"></a></div></noscript>
 <!-- End of StatCounter Code for Default Guide -->
-| <a href="http://statcounter.com/p10616444/?guest=1">View Stats</a>
+| <a href="https://statcounter.com/p10616444/?guest=1">View Stats</a>
 
 <br><br>
 <!-- Cluster Maps -->
-<div id="clustrmaps-widget"></div><script type="text/javascript">var _clustrmaps = {'url' : 'https://sh4.in', 'user' : 1179997, 'server' : '3', 'id' : 'clustrmaps-widget', 'version' : 1, 'date' : '2015-10-01', 'lang' : 'en', 'corners' : 'square' };(function (){ var s = document.createElement('script'); s.type = 'text/javascript'; s.async = true; s.src = 'http://www3.clustrmaps.com/counter/map.js'; var x = document.getElementsByTagName('script')[0]; x.parentNode.insertBefore(s, x);})();</script><noscript><a href="http://www3.clustrmaps.com/user/fcb12015d"><img src="http://www3.clustrmaps.com/stats/maps-no_clusters/sh4.in-thumb.jpg" alt="Locations of visitors to this page" /></a></noscript>
+<div id="clustrmaps-widget"></div><script type="text/javascript">var _clustrmaps = {'url' : 'https://sh4.in', 'user' : 1179997, 'server' : '3', 'id' : 'clustrmaps-widget', 'version' : 1, 'date' : '2015-10-01', 'lang' : 'en', 'corners' : 'square' };(function (){ var s = document.createElement('script'); s.type = 'text/javascript'; s.async = true; s.src = 'https://www3.clustrmaps.com/counter/map.js'; var x = document.getElementsByTagName('script')[0]; x.parentNode.insertBefore(s, x);})();</script><noscript><a href="https://www3.clustrmaps.com/user/fcb12015d"><img src="https://www3.clustrmaps.com/stats/maps-no_clusters/sh4.in-thumb.jpg" alt="Locations of visitors to this page" /></a></noscript>
 
 </section>
     </div>
     <div class="social-icons">
         
         {% if site.owner.twitter %}
-        <a href="http://twitter.com/{{ site.owner.twitter }}">
+        <a href="https://twitter.com/{{ site.owner.twitter }}">
             <span class="fa-stack fa-lg">
                 <i class="fa fa-circle fa-stack-2x fa-inverse"></i>
                 <i class="fa fa-twitter fa-stack-1x"></i>
@@ -60,7 +60,7 @@ alt="shopify analytics ecommerce"></a></div></noscript>
         </a>
         {% endif %}
         {% if site.owner.instagram %}
-        <a href="http://instagram.com/{{ site.owner.instagram }}">
+        <a href="https://instagram.com/{{ site.owner.instagram }}">
             <span class="fa-stack fa-lg">
                 <i class="fa fa-circle fa-stack-2x fa-inverse"></i>
                 <i class="fa fa-instagram fa-stack-1x"></i>
@@ -76,7 +76,7 @@ alt="shopify analytics ecommerce"></a></div></noscript>
         </a>
         {% endif %}
         {% if site.owner.facebook %}
-        <a href="http://facebook.com/{{ site.owner.facebook }}">
+        <a href="https://facebook.com/{{ site.owner.facebook }}">
             <span class="fa-stack fa-lg">
                 <i class="fa fa-circle fa-stack-2x fa-inverse"></i>
                 <i class="fa fa-facebook fa-stack-1x"></i>
