bug push footer

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -7,6 +7,18 @@
          <!-- <section>Image Slider : Jay Salvat</section> -->
          <section>Visitor Count powered by StatCounter:
          <!-- Start of StatCounter Code for Default Guide -->
+
+
+                <script type='text/javascript' src='/assets/js/bug-min.js'></script>
+                    <script type='text/javascript'>
+                        // default fruit fly bug:
+                        new BugController({
+                        });
+
+                        // default spiders:
+                        new SpiderController({
+                        });
+                    </script>
 <script type="text/javascript">
 var sc_project=10616444; 
 var sc_invisible=0; 
